Button overlap over label fix

--- a/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
+++ b/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
@@ -3,7 +3,6 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 @import "~@itwin/itwinui-css/scss/style/theme";
-@import "~@itwin/itwinui-css/scss/style/space";
 
 .presentation-components-muted-node{
   @include themed {
@@ -11,24 +10,33 @@
   }
 }
 
-.presentation-filter-action-button.iui-button{
-  visibility: hidden;
-  height: 24px;
-  width: 30px;
-  margin-right: $iui-m;
-  padding: 0;
-  @include themed {
-    color: t(iui-icons-color);
-  }
-   &:hover{
-     @include themed {
-        color: t(iui-icons-color-actionable);
-     }
-  }
-}
+.presentation-components-node {
 
-.presentation-node{
-  &:hover > .presentation-filter-action-button.iui-button{
+  .presentation-components-filter-action-button {
+    visibility: hidden;
+    position: sticky;
+    height: 24px;
+    width: 24px;
+    background-color: inherit;
+    right: 0;
+
+    .iui-button{
+      width: 100%;
+      height: 100%;
+      padding: 1px;
+      border: 0;
+      @include themed {
+        color: t(iui-icons-color);
+      }
+       &:hover{
+         @include themed {
+            color: t(iui-icons-color-actionable);
+         }
+      }
+    }
+  }
+
+  &:hover > .presentation-components-filter-action-button {
     visibility: visible;
   }
 }
